--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: valenciacc.github.io
+subtitle: A blog where I talk about my current interests at the time.
 use-site-title: true
 ---
 
